--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Omnifood</title>
+		<link rel="stylesheet" href="resources/css/style.css">
 	</head>
 	<body>
 		
