Add and link to normalize.css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Omnifood</title>
 		<link rel="stylesheet" href="resources/css/style.css">
+		<link rel="stylesheet" href="vendors/css/normalize.css">
+		<title>Omnifood</title>
 	</head>
 	<body>
 		
