--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="resources/css/style.css">
 		<link rel="stylesheet" href="vendors/css/normalize.css">
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,300italic' rel='stylesheet' type='text/css'>
 		<title>Omnifood</title>
 	</head>
 	<body>
