--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</section>
 
 		<section class="section-meals">
-			<ul class="meals-showcase">
+			<ul class="meals-showcase clearfix">
 				<li>
 					<figure class="meal-image">
 						<img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -81,7 +81,7 @@
 					</figure>
 				</li>
 			</ul>
-			<ul class="meals-showcase">
+			<ul class="meals-showcase clearfix">
 				<li>
 					<figure class="meal-image">
 						<img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
