Correct or modify some code

--- a/index.html
+++ b/index.html
@@ -132,5 +132,33 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- <section class="section-cities">
+			<div class="row">
+				<h2>We're currently in these cities</h2>
+			</div>
+			<div class="row">
+				<div class="col span-1-of-4">
+					<figure>
+						<img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+					</figure>
+				</div>
+				<div class="col span-1-of-4">
+					<figure>
+						<img src="resources/img/san-francisco.jpg" alt="San Francisco">
+					</figure>
+				</div>
+				<div class="col span-1-of-4">
+					<figure>
+						<img src="resources/img/berlin.jpg" alt="Berlin">
+					</figure>
+				</div>
+				<div class="col span-1-of-4">
+					<figure>
+						<img src="resources/img/london.jpg" alt="London">
+					</figure>
+				</div>
+			</div>
+		</section> -->
 	</body>
 </html>
