--- a/index.html
+++ b/index.html
@@ -133,32 +133,83 @@
 			</div>
 		</section>
 
-		<!-- <section class="section-cities">
+		<section class="section-cities">
 			<div class="row">
 				<h2>We're currently in these cities</h2>
 			</div>
 			<div class="row">
-				<div class="col span-1-of-4">
-					<figure>
-						<img src="resources/img/lisbon-3.jpg" alt="Lisbon">
-					</figure>
+				<div class="col span-1-of-4 box">
+					<img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+					<h3>Lisbon</h3>
+
+					<div class="cities-feature">
+						<i class="ion-ios-person"></i>
+						1600+ happy eaters
+					</div>
+					<div class="cities-feature">
+						<i class="ion-ios-star"></i>
+						60+ top chefs
+					</div>
+					<div class="cities-feature">
+						<i class="ion-social-twitter"></i>
+						@omnifood_lx
+					</div>
 				</div>
-				<div class="col span-1-of-4">
-					<figure>
-						<img src="resources/img/san-francisco.jpg" alt="San Francisco">
-					</figure>
+
+				<div class="col span-1-of-4 box">
+					<img src="resources/img/san-francisco.jpg" alt="San Francisco">
+					<h3>San Francisco</h3>
+
+					<div class="cities-feature">
+						<i class="ion-ios-person"></i>
+						3700+ happy eaters
+					</div>
+					<div class="cities-feature">
+						<i class="ion-ios-star"></i>
+						160+ top chefs
+					</div>
+					<div class="cities-feature">
+						<i class="ion-social-twitter"></i>
+						@omnifood_sf
+					</div>
 				</div>
-				<div class="col span-1-of-4">
-					<figure>
-						<img src="resources/img/berlin.jpg" alt="Berlin">
-					</figure>
+
+				<div class="col span-1-of-4 box">
+					<img src="resources/img/berlin.jpg" alt="berlin">
+					<h3>Berlin</h3>
+
+					<div class="cities-feature">
+						<i class="ion-ios-person"></i>
+						2300+ happy eaters
+					</div>
+					<div class="cities-feature">
+						<i class="ion-ios-star"></i>
+						110+ top chefs
+					</div>
+					<div class="cities-feature">
+						<i class="ion-social-twitter"></i>
+						@omnifood_berlin
+					</div>
 				</div>
-				<div class="col span-1-of-4">
-					<figure>
-						<img src="resources/img/london.jpg" alt="London">
-					</figure>
+
+				<div class="col span-1-of-4 box">
+					<img src="resources/img/london.jpg" alt="London">
+					<h3>London</h3>
+
+					<div class="cities-feature">
+						<i class="ion-ios-person"></i>
+						1200+ happy eaters
+					</div>
+					<div class="cities-feature">
+						<i class="ion-ios-star"></i>
+						50+ top chefs
+					</div>
+					<div class="cities-feature">
+						<i class="ion-social-twitter"></i>
+						@omnifood_london
+					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 	</body>
 </html>
