--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<title>Omnifood</title>
 	</head>
 	<body>
+
 		<header>
 			<nav>
 				<div class="row">
@@ -243,7 +244,7 @@
 				<h2>Start eating healthy today</h2>
 			</div>
 			<div class="row">
-				<div class="col span-1-0f-3">
+				<div class="col span-1-of-3">
 					<div class="plan-box">
 						<div>
 							<h3>Premium</h3>
@@ -252,10 +253,10 @@
 						</div>
 						<div>
 							<ul>
-								<li><i class="icon-ios-checkmark-empty"></i>1 meal every day</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Order 24/7</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Access to newest creations</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Free delivery</li>
+								<li><i class="ion-ios-checkmark-empty"></i>1 meal every day</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Order 24/7</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Access to newest creations</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
@@ -263,7 +264,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col span-1-0f-3">
+				<div class="col span-1-of-3">
 					<div class="plan-box">
 						<div>
 							<h3>Pro</h3>
@@ -272,10 +273,10 @@
 						</div>
 						<div>
 							<ul>
-								<li><i class="icon-ios-checkmark-empty"></i>1 meal 10 days/month</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Order 24/7</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Access to newest creations</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Free delivery</li>
+								<li><i class="ion-ios-checkmark-empty"></i>1 meal 10 days/month</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Order 24/7</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Access to newest creations</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
@@ -291,10 +292,10 @@
 						</div>
 						<div>
 							<ul>
-								<li><i class="icon-ios-checkmark-empty"></i>1 meal</li>
-								<li><i class="icon-ios-checkmark-empty"></i>Order from 8 am to 12 pm</li>
-								<li><i class="icon-ios-close-empty"></i></li>
-								<li><i class="icon-ios-checkmark-empty"></i>Free delivery</li>
+								<li><i class="ion-ios-checkmark-empty"></i>1 meal</li>
+								<li><i class="ion-ios-checkmark-empty"></i>Order from 8 am to 12 pm</li>
+								<li><i class="ion-ios-close-empty"></i></li>
+								<li><i class="ion-ios-checkmark-empty"></i>Free delivery</li>
 							</ul>
 						</div>
 						<div>
