--- a/index.html
+++ b/index.html
@@ -307,5 +307,73 @@
 			</div>
 		</section>
 
+		<section class="section-contact">
+			<div class="row">
+				<h2>We're happy to hear from you</h2>
+			</div>
+			<div class="row">
+				<form action="#" method="POST" class="contact-form">
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="name">Name</label>
+						</div>
+						<div class="col span-1-of-3">
+							<input type="text" id="name" name="name" placeholder="Your name"  required>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="email">Email</label>
+						</div>
+						<div class="col span-1-of-3">
+							<input type="email" id="email" name="email" placeholder="Your email"  required>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="find-us">How did you find us?me</label>
+						</div>
+						<div class="col span-1-of-3">
+							<select name="find-us" id="find-us">
+								<option value="friends" selected>Friends</option>
+								<option value="search" selected>Search Engine</option>
+								<option value="ad" selected>Advertisement</option>
+								<option value="other" selected>Other</option>
+							</select>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="news">Newsletter?</label>
+						</div>
+						<div class="col span-1-of-3">
+							<input type="checkbox" name="news" id="news" checked> Yes, please
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label for="message">Drop us a line</label>
+						</div>
+						<div class="col span-1-of-3">
+							<textarea name="message" id="message" placeholder="Your message"></textarea>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col span-1-of-3">
+							<label>&nbsp;</label>
+						</div>
+						<div class="col span-1-of-3">
+							<input type="submit" value="Send it!">
+						</div>
+					</div>
+				</form>
+			</div>
+		</section>
+
 	</body>
 </html>
