--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 						<div class="col span-1-of-3">
 							<label for="name">Name</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<input type="text" id="name" name="name" placeholder="Your name"  required>
 						</div>
 					</div>
@@ -326,16 +326,16 @@
 						<div class="col span-1-of-3">
 							<label for="email">Email</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<input type="email" id="email" name="email" placeholder="Your email"  required>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col span-1-of-3">
-							<label for="find-us">How did you find us?me</label>
+							<label for="find-us">How did you find us?</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<select name="find-us" id="find-us">
 								<option value="friends" selected>Friends</option>
 								<option value="search" selected>Search Engine</option>
@@ -349,7 +349,7 @@
 						<div class="col span-1-of-3">
 							<label for="news">Newsletter?</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<input type="checkbox" name="news" id="news" checked> Yes, please
 						</div>
 					</div>
@@ -358,7 +358,7 @@
 						<div class="col span-1-of-3">
 							<label for="message">Drop us a line</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<textarea name="message" id="message" placeholder="Your message"></textarea>
 						</div>
 					</div>
@@ -367,7 +367,7 @@
 						<div class="col span-1-of-3">
 							<label>&nbsp;</label>
 						</div>
-						<div class="col span-1-of-3">
+						<div class="col span-2-of-3">
 							<input type="submit" value="Send it!">
 						</div>
 					</div>
